# nebel-ai

./: compose.yaml
api/: Cargo.toml  Dockerfile  ecosystem.config.js  go.mod  main.go
api/bindings/: ContactForm.ts
api/server/: Caddyfile
api/src/: go.sum  main.rs  send_email.rs
api/src/routes/: contact.go  contact.rs
docker/: compose.yaml
docker/ci/: compose.yaml
docker/server/: Caddyfile
gui/: .env  .gitignore  .prettierignore  .prettierrc  Dockerfile  bun.lockb  i18n.config.js  package.json  svelte.config.js  vite.config.ts
gui/messages/: de.json  en.json  ja.json  jp.json  ru.json
gui/project.inlang/: project_id  settings.json
gui/scripts/: start.sh
gui/src/: app.html  app.scss  app.tsx  consts.ts  entry-server.tsx  hooks.server.ts  hooks.ts  main.scss  types.ts
gui/src/api/queries/: contact.ts
gui/src/api/types/: ContactForm.ts
gui/src/components/Children/: Children.svelte
gui/src/components/Contact/: Contact.svelte
gui/src/components/Icons/: Check.svelte  Cross.svelte
gui/src/components/LanguageSwitcher/: LanguageSwitcher.module.scss  LanguageSwitcher.svelte
gui/src/components/Modal/: Modal.module.scss  Modal.svelte  Modal.tsx
gui/src/components/Navbar/: Navbar.module.scss  Navbar.svelte  Navbar.tsx
gui/src/components/PageWrapper/: PageWrapper.svelte
gui/src/routes/: +layout.js  +layout.server.js  +layout.server.ts  +layout.svelte  +page.svelte  about.tsx  index.module.scss  index.tsx  portfolio.tsx
gui/src/utils/: axios.ts  css.ts  helpers.module.scss  i18n.svelte.ts  i18n.ts  translations.ts
(+27 files in other folders)
